# multi-robot-simulation

./: CMakeLists.txt  README.md  package.xml  setup_simulation.sh
config/: setup.cfg
config/ur/ur5/: visual_parameters.yaml
docs/: enviroment_issues.md  useful_commands.md
env-hooks/: multi_robot.dsv.in  multi_robot_arm.dsv.in
launch/: gazebo_arm.launch.py  gazebo_multi_nav2_world.launch.py  masters_multi_robot_launch.py  masters_multi_world.launch.py  spawn_arms.py  spawn_gazebo_nav.py
launch/nav2_bringup/: bringup_launch.py  localization_launch.py  navigation_launch.py  slam_launch.py
maps/: map_1696284787.pgm  map_1696284787.yaml
params/: nav2_params.yaml
urdf/ur/ur5/: ur_macro.xacro  ur_urdf.xacro
worlds/: masters_world.world
worlds/masters_worlds/masters_world/: model.config  model.sdf
